  seems to have triggered a twisted bug where it wouldn't allow the /bin/file
  process to exit cleanly (on some if not all platforms)

o Added assembly support for split .ts files, recognizes patterns such as:
    hello.001.TS                hi.0001.ts
    hello.002.TS                hi.0002.ts
                                hi.0003.ts

ArticleDecoder:

o Optimized the YDecoder. Benchmarks show it using approximately 6-8% less CPU
  on an Athlon XP 2600+, FreeBSD 4.10


v0.6:

Daemon:

o Added XMLRPC calls to control an already running hellanzb, similar to nzbq
  and related programs. hellanzb, when invoked with a 'remote-call', will send
  xmlrpc calls to the main hellanzb process:

(From hellanzb.py --help)

remote-calls (via XML-RPC):
  cancel                Cancel the current download and move the current NZB to
                        Hellanzb.TEMP_DIR
  clear                 Clear the current nzb queue. Specify True as the second
                        argument to clear anything currently downloading as
                        well (like the cancel call)
  continue              Continue downloading after being paused
  dequeue nzbid         Remove the NZB with specified ID from the queue
  down nzbid [shift]    Move the NZB with the specified ID down in the queue.
                        The optional second argument specifys the number of
                        spaces to shift by (Default: 1)
  enqueue nzbfile       Add the specified NZB file to the end of the queue
  force nzbid           Force hellanzb to begin downloading the NZB with the
                        specified ID immediately, interrupting the current
                        download
  last nzbid            Move the NZB with the specified ID to the end of the
                        queue
  list [showids]        List the current queue. Specify True as the second
                        argument to include the NZB ID in the listing